--- a/index.html
+++ b/index.html
@@ -691,16 +691,18 @@
         <h2>Cost calculation</h2>
         <div class="const-calculation_steps steps">
             <div class="steps_section">
-                <div class="steps_line">
+                <!-- <div class="steps_line">
                     <p class="steps_line1 line-disable"></p>
                     <p class="steps_line2 line-disable"></p>
+                </div> -->
+                <div class="modal_operations calculation-steps">
+                    <div class="number1 cost modal_number number-active"><span>1</span></div>
+                    <span class="cost-calculation-line"></span>
+                    <div class="number2 cost modal_number number-disable"><span>2</span></div>
+                    <span class="cost-calculation-line"></span>
+                    <div class="number3 cost modal_number number-disable"><span>3</span></div>
                 </div>
-                <div class="modal_operations">
-                    <div class="number1 modal_number number-active"><span>1</span></div>
-                    <div class="number2 modal_number number-disable"><span>2</span></div>
-                    <div class="number3 modal_number number-disable"><span>3</span></div>
-                </div>
-                <div class="modal_steps-description">
+                <div class="modal_steps-description calculation-description">
                     <span class="step1 modal_steps-span steps-active">Translation direction</span>
                     <span class="step2 modal_steps-span steps-disable" >Text and timing</span>
                     <span class="step3 modal_steps-span steps-disable">Contact details</span>
@@ -731,8 +733,12 @@
                 </select>
             </div>
         </div>
-        <div class="cost-calculation_description"></div>
-        <div class="cost-calculation_buttons"></div>
+        <div class="cost-calculation_description">
+            <input class="cost-calculation_input" type="text">
+        </div>
+        <div class="cost-calculation_buttons">
+            <button class="cost-calculation_next">Next</button>
+        </div>
     </div>
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
