--- a/index.html
+++ b/index.html
@@ -709,10 +709,10 @@
                 </div>
             </div>
         </div>
-        <div class="const-calculation_language">
-            <span>1 Select the translation direction</span>
+        <div class="cost-calculation_language">
+            <span>1.Select the translation direction</span>
             <div class="cost-calculation_select">
-                <select class="form_translate" name="user_profile_color_2" required="required">
+                <select class="form_translate cost-select" name="user_profile_color_2" required="required">
                     <option value="">Translation from</option>
                     <option value="1">Romanian</option>
                     <option value="2">English</option>
@@ -720,10 +720,10 @@
                     <option value="4">French</option>
                     <option value="5">Italian</option>
                 </select>
-                <div class="form_arrow">
+                <div class="form_arrow cost-arrow">
                     <img src="/img/arrow-logo.svg" alt="arrow">
                 </div>
-                <select class="form_translate" name="user_profile_color_2" required="required">
+                <select class="form_translate cost-select" name="user_profile_color_2" required="required">
                     <option value="">Translation to</option>
                     <option value="1">Romanian</option>
                     <option value="2">English</option>
