--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@
                 </div>
             </div>
         </div>
+        <form action="submit">
         <div class="cost-calculation_language">
             <span>1.Select the translation direction</span>
             <div class="cost-calculation_select">
@@ -734,11 +735,15 @@
             </div>
         </div>
         <div class="cost-calculation_description">
-            <input class="cost-calculation_input" type="text">
+            <textarea name="comment" id="calculation-comment" placeholder ="We translate from more than 70 languages of the world. 
+If suddenly the language you need is not on the list, please contact us by phone: +40 740 618 928
+
+We will definitely help you!" cols="30" rows="10"></textarea>
         </div>
         <div class="cost-calculation_buttons">
             <button class="cost-calculation_next">Next</button>
         </div>
+        </form>
     </div>
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
