--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                 </div>
             </div>
         </div>
-        <form action="submit">
+        <form>
         <div class="cost-calculation_language">
             <span>1.Select the translation direction</span>
             <div class="cost-calculation_select">
