--- a/index.html
+++ b/index.html
@@ -709,7 +709,6 @@
                 </div>
             </div>
         </div>
-        <form>
         <div class="cost-calculation_language">
             <span>1.Select the translation direction</span>
             <div class="cost-calculation_select">
@@ -743,7 +742,6 @@ We will definitely help you!" cols="30" rows="10"></textarea>
         <div class="cost-calculation_buttons">
             <button class="cost-calculation_next">Next</button>
         </div>
-        </form>
     </div>
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
@@ -751,7 +749,7 @@ We will definitely help you!" cols="30" rows="10"></textarea>
 <div class="footer-background">
     <div class="footer container">
         <div class="column1">
-            <div class="column1_logo"><img src="/img/logo1.svg" alt="logo"></div>
+            <div class="column1_logo"><img src="/img/logo1.svg" alt="logo" width="99" height="61"></div>
             <div class="column1_logo-description"><span>Translation agency <br>Universal in Bucharest</span></div>
             <div class="column1_contact"><span>Contact us:</span></div>
             <div class="column1_buttons">
