--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ We will definitely help you!" cols="30" rows="10"></textarea>
                             <p>Drag files here <br>or</p>
                             <input type="file" id="doc" name="doc">
                         </div>
-                        <div class="form-calculation_task">
+                        <div class="form-calculation2_task">
                             <textarea name="task" id="task" cols="30" rows="10"></textarea>
                         </div>
                     </div>
