--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
             </div>
         </div>
         <div class="form-calculation-container">
-            <div class="form-calculation1">
+            <div class="form-calculation1"><!--form-calculation1-->
                 <div class="cost-calculation_language">
                     <span>1.Select the translation direction</span>
                     <div class="cost-calculation_select">
@@ -742,7 +742,7 @@ We will definitely help you!" cols="30" rows="10"></textarea>
                 </div>
                 </div>
             </div><!--form-calculation1-->
-            <div class="form-calculation2">
+            <div class="form-calculation2"><!--form-calculation2-->
                 <div class="cost-calculation_language">
                     <span>2.Upload a file or enter a task in the text field</span>
                     <div class="form-calculation2_input">
@@ -757,9 +757,10 @@ We will definitely help you!" cols="30" rows="10"></textarea>
                 </div>
                 
                 <div class="cost-calculation_buttons">
-                    <button class="cost-calculation_next">Next</button>
+                    <button class="cost-calculation_next1">Next</button>
+                    <button class="cost-calculation_back">Back</button>
                 </div>
-            </div>
+            </div><!--form-calculation2-->
         </div><!--form-calculation1-container-->
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
