--- a/index.html
+++ b/index.html
@@ -761,6 +761,26 @@ We will definitely help you!" cols="30" rows="10"></textarea>
                     <button class="cost-calculation_back">Back</button>
                 </div>
             </div><!--form-calculation2-->
+            <div class="form-calculation3"><!--form-calculation3-->
+                <div class="cost-calculation_language">
+                    <span>2.Upload a file or enter a task in the text field</span>
+                    <div class="form-calculation2_input">
+                        <div class="form-calculation2_chose-file">
+                            <p>Drag files here <br>or</p>
+                            <input type="file" id="doc" name="doc">
+                        </div>
+                        <div class="form-calculation2_task">
+                            <textarea name="task" id="task" cols="30" rows="10"></textarea>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="cost-calculation_buttons">
+                    <button class="cost-calculation_next1">Next</button>
+                    <button class="cost-calculation_back">Back</button>
+                </div>
+            </div><!--form-calculation3-->
+
         </div><!--form-calculation1-container-->
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
