--- a/index.html
+++ b/index.html
@@ -766,11 +766,11 @@ We will definitely help you!" cols="30" rows="10"></textarea>
                     <span>3.Enter your contact details</span>
                     <div class="form-calculation3_input">
                         <div class="form-calculation3_full-name">
-                            <input type="text">
+                            <input type="text" placeholder="FULL NAME*">
                         </div>
-                        <div class="form-calculation3_emal-text">
-                            <input type="text">
-                            <input type="text">
+                        <div class="form-calculation3_email-text">
+                            <input type="text" placeholder="E-mail">
+                            <input type="text" placeholder="Tel*">
                         </div>
                     </div>
                 </div>
