--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
         </div>
     </div>
 <!-- Header ==================================================================================================================================== -->
+<!-- Modal ==================================================================================================================================== -->
+    <div class="modal1 modal1hide">
+        <form class="modal1_content">
+            <h3 class="modal1_title">Request a call</h3>
+            <span class="modal1_description">Leave your details and <br> we will call you back</span>
+            <div class="modal1_input">
+                <input type="text" placeholder="Your name">
+                <input type="text" placeholder="Phone number">
+            </div>
+            <button class="modal1_button">Submit an application</button>
+            <div class="modal1-image">
+                <button class="modal1-button">
+                <img  src="./img/close-modal.svg" alt="close-modal">
+                </button>
+            </div>
+        </form>
+    </div>
+<!-- Modal ==================================================================================================================================== -->
 <!-- Wallpaper ==================================================================================================================================== -->
     <div class="wallpaper">
         <div class="background">
@@ -62,7 +80,7 @@
                         <p class="paragraph">We provide a full range of translation<br> and interpreting services.</p>
                     </div>
                 </div>
-                <div class="section_top-right modal contracted">
+                <form class="section_top-right modal contracted">
                     <h3 class="modal_title">Translate Calculation</h3>
                     <div class="modal_steps">
                         <div class="modal_line">
@@ -136,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
