--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             </div>
             <div class="border-top"></div>
             <ul class="container menu">
-                <li><a href="#" class="menu_link">Services</a></li>
-                <li><a href="#" class="menu_link">Prices</a></li>
-                <li><a href="#" class="menu_link">Our company</a></li>
-                <li><a href="#" class="menu_link">Request</a></li>
-                <li><a href="#" class="menu_link">Stages</a></li>
-                <li><a href="#" class="menu_link">Advantages</a></li>
-                <li><a href="#" class="menu_link">Reviews</a></li>
-                <li><a href="#" class="menu_link">Question and answers</a></li>
-                <li><a href="#" class="menu_link">Contact</a></li>
+                <li><a href="#Services" class="menu_link">Services</a></li>
+                <li><a href="#Prices" class="menu_link">Prices</a></li>
+                <li><a href="#company" class="menu_link">Our company</a></li>
+                <li><a href="#Request" class="menu_link">Request</a></li>
+                <li><a href="#Stages" class="menu_link">Stages</a></li>
+                <li><a href="#Advantages" class="menu_link">Advantages</a></li>
+                <li><a href="#Reviews" class="menu_link">Reviews</a></li>
+                <li><a href="#answers" class="menu_link">Question and answers</a></li>
+                <li><a href="#Contact" class="menu_link">Contact</a></li>
                 <button class="request-call">Request call</button>
             </ul>
         </div>
@@ -192,7 +192,7 @@
     </div>
 <!-- Section bottom ==================================================================================================================================== -->
 <!-- Menu Card Services ====================================================================================== -->
-    <div class="services">
+    <div id="Services" class="services">
         <h2 class="services_our-services container">Our Services</h2>
         <div class="services_top-section container">
             <div class="services_personal-documents shadow">
@@ -282,7 +282,7 @@
     </div>
 <!-- Aditional services ==================================================================================================================================== -->
 <!-- Our company section ==================================================================================================================================== -->
-    <div class="our-company">
+    <div id="company" class="our-company">
         <div class="our-company_image">
             <div class="our-company_section container">
                 <div class="our-company_left">
@@ -310,7 +310,7 @@
     </div>
 <!-- Our company section ==================================================================================================================================== -->
 <!-- Advantage Section ==================================================================================================================================== -->
-    <div class="advantage-section">
+    <div id="Advantages" class="advantage-section">
         <h2>15 reasons to choose us!</h2>
         <div class="advantage-section_section-total container">
         
@@ -435,7 +435,7 @@
     </div>
 <!-- Section3 ==================================================================================================================================== -->
 <!-- Order Translation ==================================================================================================================================== -->
-    <div class="order-translation">
+    <div id="Request" class="order-translation">
         <div class="order-translation_section">
             <h2 class="order-translation_title">How to order a translation?</h2>
             <div class="order-translation_steps">
@@ -474,7 +474,7 @@
     </div>
 <!-- Order Translation ==================================================================================================================================== -->
 <!-- Slider ==================================================================================================================================== -->
-<div class="slider container">
+<div id="Stages" class="slider container">
     <div class="slider_title">
         <h2>Recommendation letters</h2>
     </div>
@@ -495,7 +495,7 @@
 </div>
 <!-- Slider ==================================================================================================================================== -->
 <!-- Tarifs ==================================================================================================================================== -->
-<div class="tarifs">
+<div id="Prices" class="tarifs">
     <div class="tarifs_section container">
         <div class="tarifs_section-all">
             <h2 class="table_title">Tariffs and prices</h2>
@@ -560,7 +560,7 @@
 </div>
 <!-- Tarifs ==================================================================================================================================== -->
 <!-- Question ==================================================================================================================================== -->
-<div class="questions-answers container">
+<div id="answers" class="questions-answers container">
     <div class="questions-answers_wallpaper">
         <h2>Questions and answers</h2>
         <div class="questions-answers_section">
@@ -704,7 +704,7 @@
 </div>
 <!-- Flags ==================================================================================================================================== -->
 <!-- Cost Calculation ==================================================================================================================================== -->
-<div class="cost-calculation container">
+<div id="Contact" class="cost-calculation container">
     <div class="cost-calculation_section">
         <h2>Cost calculation</h2>
         <div class="const-calculation_steps steps">
@@ -803,7 +803,7 @@ We will definitely help you!" cols="30" rows="10"></textarea>
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
 <!-- Footer ==================================================================================================================================== -->
-<div class="footer-background">
+<div id="Reviews" class="footer-background">
     <div class="footer container">
         <div class="column1">
             <div class="column1_logo"><img src="/img/logo1.svg" alt="logo" width="99" height="61"></div>
