--- a/index.html
+++ b/index.html
@@ -480,15 +480,15 @@
     </div>
     <div class="slider_section">
         <div class="slider_buttons">
-            <button class="slider_button1"><img src="/img/slider-button-left.svg" alt="button-left"></button>
-            <button class="slider_button2"><img src="/img/slider-button-right.svg" alt="button-left"></button>
+            <button class="slider_button1"><img src="./img/slider-button-left.svg" alt="button-left"></button>
+            <button class="slider_button2"><img src="./img/slider-button-right.svg" alt="button-left"></button>
         </div>
         <div class="slider_image">
-            <img class="slider_image1 slide-active" src="/img/recomendation1.png"  alt="recomendation1">
-            <img class="slider_image2 slide-active" src="/img/recomendation2.png" alt="recomendation2">
-            <img class="slider_image3 slide-active" src="/img/recomendation3.png" alt="recomendation3">
-            <img class="slider_image4 slide-disable" src="/img/recomendation1.png" alt="recomendation4">
-            <img class="slider_image5 slide-disable" src="/img/recomendation2.png" alt="recomendation5">
+            <img class="slider_image1 slide-active" src="./img/recomendation1.png"  alt="recomendation1">
+            <img class="slider_image2 slide-active" src="./img/recomendation2.png" alt="recomendation2">
+            <img class="slider_image3 slide-active" src="./img/recomendation3.png" alt="recomendation3">
+            <img class="slider_image4 slide-disable" src="./img/recomendation1.png" alt="recomendation4">
+            <img class="slider_image5 slide-disable" src="./img/recomendation2.png" alt="recomendation5">
             <!-- <img class="slider_image6 slide-disable" src="/img/recomendation3.png" alt="recomendation6"> -->
         </div>
     </div>
@@ -576,10 +576,10 @@
                 </div>
                 <div class="questions-answers_image">
                     <button class="question-open question-active">
-                        <img  src="/img/question-open.svg" alt="question-open">
+                        <img  src="./img/question-open.svg" alt="question-open">
                     </button>
                     <button class="question-close question-disable">
-                        <img  src="/img/question-close.svg" alt="question-open">
+                        <img  src="./img/question-close.svg" alt="question-open">
                     </button>
                 </div>
             </div>
@@ -598,10 +598,10 @@
                 </div>
                 <div class="questions-answers_image">
                     <button class="question-open question-active">
-                        <img  src="/img/question-open.svg" alt="question-open">
+                        <img  src="./img/question-open.svg" alt="question-open">
                     </button>
                     <button class="question-close question-disable">
-                        <img  src="/img/question-close.svg" alt="question-open">
+                        <img  src="./img/question-close.svg" alt="question-open">
                     </button>
                 </div>
             </div>
@@ -620,10 +620,10 @@
                 </div>
                 <div class="questions-answers_image">
                     <button class="question-open question-active">
-                        <img  src="/img/question-open.svg" alt="question-open">
+                        <img  src="./img/question-open.svg" alt="question-open">
                     </button>
                     <button class="question-close question-disable">
-                        <img  src="/img/question-close.svg" alt="question-open">
+                        <img  src="./img/question-close.svg" alt="question-open">
                     </button>
                 </div>
             </div>
@@ -642,10 +642,10 @@
                 </div>
                 <div class="questions-answers_image">
                     <button class="question-open question-active">
-                        <img  src="/img/question-open.svg" alt="question-open">
+                        <img  src="./img/question-open.svg" alt="question-open">
                     </button>
                     <button class="question-close question-disable">
-                        <img  src="/img/question-close.svg" alt="question-open">
+                        <img  src="./img/question-close.svg" alt="question-open">
                     </button>
                 </div>
             </div>
@@ -664,10 +664,10 @@
                 </div>
                 <div class="questions-answers_image">
                     <button class="question-open question-active">
-                        <img  src="/img/question-open.svg" alt="question-open">
+                        <img  src="./img/question-open.svg" alt="question-open">
                     </button>
                     <button class="question-close question-disable">
-                        <img  src="/img/question-close.svg" alt="question-open">
+                        <img  src="./img/question-close.svg" alt="question-open">
                     </button>
                 </div>
             </div>
@@ -686,10 +686,10 @@
                 </div>
                 <div class="questions-answers_image">
                     <button class="question-open question-active">
-                        <img  src="/img/question-open.svg" alt="question-open">
+                        <img  src="./img/question-open.svg" alt="question-open">
                     </button>
                     <button class="question-close question-disable">
-                        <img  src="/img/question-close.svg" alt="question-open">
+                        <img  src="./img/question-close.svg" alt="question-open">
                     </button>
                 </div>
             </div>
@@ -700,7 +700,7 @@
 <!-- Question ==================================================================================================================================== -->
 <!-- Flags ==================================================================================================================================== -->
 <div class="flags container">
-    <div class="flags_img"><img src="/img/flags-group.png" alt="Flags-roup"></div>
+    <div class="flags_img"><img src="./img/flags-group.png" alt="Flags-roup"></div>
 </div>
 <!-- Flags ==================================================================================================================================== -->
 <!-- Cost Calculation ==================================================================================================================================== -->
@@ -737,7 +737,7 @@
                             <option value="5">Italian</option>
                         </select>
                         <div class="form_arrow cost-arrow">
-                            <img src="/img/arrow-logo.svg" alt="arrow">
+                            <img src="./img/arrow-logo.svg" alt="arrow">
                         </div>
                         <select class="form_translate cost-select" name="user_profile_color_2" required="required">
                             <option value="">Translation to</option>
@@ -806,13 +806,13 @@ We will definitely help you!" cols="30" rows="10"></textarea>
 <div id="Reviews" class="footer-background">
     <div class="footer container">
         <div class="column1">
-            <div class="column1_logo"><img src="/img/logo1.svg" alt="logo" width="99" height="61"></div>
+            <div class="column1_logo"><img src="./img/logo1.svg" alt="logo" width="99" height="61"></div>
             <div class="column1_logo-description"><span>Translation agency <br>Universal in Bucharest</span></div>
             <div class="column1_contact"><span>Contact us:</span></div>
             <div class="column1_buttons">
-                <button class="contact-us"><img src="img/whatsapp.svg" alt="whatsapp">WHATSAPP</button>
-                <button class="contact-us"><img src="img/instagram.svg" alt="instagram">INSTAGRAM</button>
-                <button class="contact-us"><img src="img/telegram.svg" alt="telegram">TELEGRAM</button>
+                <button class="contact-us"><img src="./img/whatsapp.svg" alt="whatsapp">WHATSAPP</button>
+                <button class="contact-us"><img src="./img/instagram.svg" alt="instagram">INSTAGRAM</button>
+                <button class="contact-us"><img src="./img/telegram.svg" alt="telegram">TELEGRAM</button>
             </div>
         </div>
         <div class="column">
@@ -859,5 +859,5 @@ We will definitely help you!" cols="30" rows="10"></textarea>
 </div>
 <!-- Footer ==================================================================================================================================== -->
 </body>
-<script src="js/JavaScript.js"></script>
+<script src="./js/JavaScript.js"></script>
 </html>
